backend/crates/anecho-dsp/tests/snapshots/golden__imd_ccif_clean.snap
---
source: backend/crates/anecho-dsp/tests/golden.rs
expression: "((r.imd_pct * 1e6).round() / 1e6,\nr.products.iter().map(|(hz, db)| (r3(*hz), r3(*db))).collect::<Vec<_>>())"
---
[
  0.000001,
  [
    [
      1000.0,
      -176.898
    ],
    [
      18000.0,
      -166.188
    ],
    [
      21000.0,
      -167.872
    ]
  ]
]
