backend/crates/anecho-dsp/tests/snapshots/golden__imd_smpte_clean.snap
---
source: backend/crates/anecho-dsp/tests/golden.rs
expression: "((r.imd_pct * 1e6).round() / 1e6,\nr.products.iter().map(|(hz, db)| (r3(*hz), r3(*db))).collect::<Vec<_>>())"
---
[
  0.000001,
  [
    [
      6940.0,
      -176.492
    ],
    [
      7060.0,
      -166.843
    ],
    [
      6880.0,
      -169.225
    ],
    [
      7120.0,
      -168.453
    ],
    [
      6820.0,
      -174.668
    ],
    [
      7180.0,
      -168.944
    ],
    [
      6760.0,
      -170.31
    ],
    [
      7240.0,
      -177.868
    ]
  ]
]
