backend/crates/anecho-dsp/tests/snapshots/golden__rta_pink_noise_log_axis_24pts.snap
---
source: backend/crates/anecho-dsp/tests/golden.rs
expression: display
---
[
  -23.404,
  -24.359,
  -25.029,
  -26.94,
  -27.517,
  -30.6,
  -29.202,
  -30.317,
  -32.43,
  -34.82,
  -34.79,
  -36.653,
  -38.065,
  -38.413,
  -39.786,
  -40.813,
  -42.472,
  -43.61,
  -44.949,
  -46.401,
  -47.298,
  -48.853,
  -49.394,
  -51.082
]
