backend/crates/anecho-dsp/tests/snapshots/golden__rta_pink_noise_octaves.snap
---
source: backend/crates/anecho-dsp/tests/golden.rs
expression: band_db
---
[
  [
    62.5,
    -24.682
  ],
  [
    125.0,
    -24.135
  ],
  [
    250.0,
    -24.63
  ],
  [
    500.0,
    -24.432
  ],
  [
    1000.0,
    -24.266
  ],
  [
    2000.0,
    -24.541
  ],
  [
    4000.0,
    -24.427
  ],
  [
    8000.0,
    -24.455
  ],
  [
    16000.0,
    -24.469
  ]
]
