backend/crates/anecho-dsp/tests/snapshots/golden__rta_pink_noise_total_power_db.snap
---
source: backend/crates/anecho-dsp/tests/golden.rs
expression: r3(10.0 * total.log10())
---
-14.44
