backend/crates/anecho-dsp/tests/snapshots/golden__thd_sine_997_in_white_noise.snap
---
source: backend/crates/anecho-dsp/tests/golden.rs
expression: "thd_snapshot(&x, Window::BlackmanHarris7)"
---
{
  "fundamental_hz": 996.999,
  "fundamental_level_db": -9.996,
  "thd_pct": 0.002,
  "thd_db": -93.962,
  "thd_n_pct": 0.03041,
  "harmonics_db_rel": [
    [
      2,
      -107.028
    ],
    [
      3,
      -98.746
    ],
    [
      4,
      -105.699
    ],
    [
      5,
      -106.968
    ],
    [
      6,
      -102.85
    ],
    [
      7,
      -102.58
    ],
    [
      8,
      -103.173
    ],
    [
      9,
      -103.37
    ]
  ],
  "noise_floor_db": -122.508
}
