backend/crates/anecho-dsp/tests/snapshots/golden__thd_sine_h2_h3_bh7.snap
---
source: backend/crates/anecho-dsp/tests/golden.rs
assertion_line: 77
expression: "thd_snapshot(&x, Window::BlackmanHarris7)"
---
{
  "fundamental_hz": 999.999,
  "fundamental_level_db": -6.018,
  "thd_pct": 0.10488,
  "thd_db": -59.586,
  "thd_n_pct": 0.10488,
  "harmonics_db_rel": [
    [
      2,
      -60.0
    ],
    [
      3,
      -70.0
    ],
    [
      4,
      -184.746
    ],
    [
      5,
      -165.941
    ],
    [
      6,
      -176.741
    ],
    [
      7,
      -162.092
    ],
    [
      8,
      -163.806
    ],
    [
      9,
      -171.794
    ]
  ],
  "noise_floor_db": -230.275
}
